[gd_scene load_steps=5 format=3 uid="uid://e1ay8usybas2"]

[ext_resource type="Script" path="res://old/Scripts/UI/escape_menu.gd" id="1_ar76q"]

[sub_resource type="PlaneMesh" id="PlaneMesh_ryspd"]
size = Vector2(250, 500)
orientation = 2

[sub_resource type="Gradient" id="Gradient_8di4e"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.055794, 1)
colors = PackedColorArray(0.108721, 0.108721, 0.108721, 1, 0.407056, 0.407056, 0.407056, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jqv6u"]
gradient = SubResource("Gradient_8di4e")
fill_to = Vector2(1, 1)

[node name="escape_menu_root" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ar76q")

[node name="escape_menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 835.0
offset_top = 290.0
offset_right = 1085.0
offset_bottom = 790.0
grow_horizontal = 2
grow_vertical = 2

[node name="escape_menu_backdrop" type="MeshInstance2D" parent="escape_menu"]
light_mask = 0
position = Vector2(125, 250)
mesh = SubResource("PlaneMesh_ryspd")
texture = SubResource("GradientTexture2D_jqv6u")

[node name="button_continue" type="Button" parent="escape_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -200.0
offset_right = 75.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue"

[node name="button_progress" type="Button" parent="escape_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -100.0
offset_right = 75.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
text = "Progress"

[node name="button_interface" type="Button" parent="escape_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.0
offset_right = 75.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
text = "Interface"

[node name="button_keybindings" type="Button" parent="escape_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_right = 75.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
text = "Keybindings"

[node name="button_exit_game" type="Button" parent="escape_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 150.0
offset_right = 75.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit Game"

[connection signal="pressed" from="escape_menu/button_continue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="escape_menu/button_progress" to="." method="_on_button_progress_pressed"]
[connection signal="pressed" from="escape_menu/button_interface" to="." method="_on_button_interface_pressed"]
[connection signal="pressed" from="escape_menu/button_exit_game" to="." method="_on_button_exit_game_pressed"]
